# HUSSEL

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DeepSeek用量监控.lnk  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: index-BLz7ikKD.js  index-BXjyti0t.js  index-C6Ibzrhw.js  index-CR3MnBtc.js  index-CV5ySjYV.js  index-D2USD_Y7.js  index-DrshJCyS.css  index-v064-041663E7.js
deepseek-monitor/: config.py  main.py  manual_dialog.py  overlay.py  proxy_server.py  settings.json  start_monitor.bat  storage.py  token_tracker.py  tray_icon.py  usage_data.json  utils.py
docs/: DATA_SOURCES.md  INSTALLATION.md  PROMOTION.md  USER_GUIDE.md  adapter-development.md  codex-retention-features.md  logs-and-security.md  provider-logo-sources.md
docs/releases/: v0.2.0.md
pomodoro/: index.html
pomodoro/css/: style.css
pomodoro/js/: app.js  notifications.js  settings.js  timer.js
src/: App.vue  data.ts  floating.css  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CodexRetentionPanel.vue  ProviderMark.vue
src/features/: retention.ts
