[package]
name = "token-manager"
version = "0.2.0"
description = "本地 AI Token 用量监控工具"
edition = "2021"

[lib]
name = "token_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "6"
dirs = "5"
axum = "0.7"
tokio = { version = "1", features = ["net"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }
base64 = "0.22"
chacha20poly1305 = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
